Now it's (maybe)work but slow